
* master *

* Make sure dead or not enabled connections are handled.

* Fix bad client after timeout & read from server errors.


* 0.2.3 *

*  Do not use development ruby/version, but simple memoize an eval check on init to find out, for 1.8.6 reflection.


* 0.2.2 *

* Fixed failing test in Ruby 1.8.6. DateTime doesn't support fractional seconds greater than 59. See: http://redmine.ruby-lang.org/issues/show/1490 [Erik Bryn]


* 0.2.1 *

* Compatibility with 32-bit systems. Better cross language testing. [Klaus Gundermann]


* 0.2.0 *

* Convert GUID's in a more compatible way. [Klaus Gundermann]

* Handle multiple result sets in command buffer or stored procs. [Ken Collins]

* Fixed some compiler warnings. [Erik Bryn]

* Avoid segfault related to smalldatetime conversion. [Erik Bryn]

* Properly encode column names in 1.9. [Erik Bryn]


* 0.1.0 Initial release!
