@@ -1,6 +1,8 @@
 
 * master *
 
+* Access stored procedure return codes.
+
 * Make sure dead or not enabled connections are handled.
 
 * Fix bad client after timeout & read from server errors.
